Install required packages

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,10 @@ yarn-error.log
 .idea/
 .project
 .classpath
+.c9/
 *.launch
 .settings/
+*.sublime-workspace
 
 # Visual Studio Code
 .vscode/*
@@ -26,12 +28,18 @@ yarn-error.log
 !.vscode/extensions.json
 .history/*
 
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
 # System files
 .DS_Store
 Thumbs.db
-
-restclient
-
 # Firebase
 .firebase
 *-debug.log
